# inventory_test

./: CMakeLists.txt  inventory_widget.cpp  inventory_widget.hpp  item_widget.cpp  item_widget.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
controller/: CMakeLists.txt  controller.cpp  controller.hpp
database/: CMakeLists.txt  database.hpp  sqlitedb.cpp  sqlitedb.hpp
inventory/: CMakeLists.txt  inventory.cpp  inventory.hpp  item.cpp  item.hpp
item/: CMakeLists.txt  item.cpp  item.hpp
resources/: inventory.db
